[project]
name = "langmesh-openai"
version = "1.0.0"
description = "langmesh SDK for OpenAI - Telemetry and cost optimization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "langmesh", email = "support@langmesh.ai" }
]
keywords = ["openai", "langmesh", "llm", "cost-optimization", "telemetry", "ai", "gpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://langmesh.ai"
Documentation = "https://langmesh.ai/docs/sdk/python"
Repository = "https://github.com/langmesh-ai/langmesh-sdks.git"
Issues = "https://github.com/langmesh-ai/langmesh-sdks/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "respx>=0.20.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langmesh_openai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
